# testing_crewai

./: .gitignore  README.md  requirements.txt
podcast_prepper/: README.md  adam_sandler_report.md  crewai_flow.html  log_guest_research_crew.txt  log_questions_research_crew.txt  log_token_usage.txt  pyproject.toml
podcast_prepper/src/podcast_prepper/: main.py
research_from_trello/: README.md  article.txt  pyproject.toml  research.txt
research_from_trello/src/research_from_trello/: crew.py  main.py
research_item/: README.md  pyproject.toml  report.md  report_gpt-4o-mini.md  report_llama3.1_8b_q4_k_m_context_8196.md  report_llama3.1_8b_q8_context_4096.md
research_item/src/research_item/: crew.py  main.py
research_item/steps/: reddit_search_comparison_task.md  serper_comparison_task.md  tavily_comparison_task.md  website_scrape_task.md
scene_maker/: README.md  pyproject.toml  report_2025-01-27_01-03-21.md  report_2025-01-27_01-09-20.md  report_2025-01-27_01-13-16.md
scene_maker/input/: synopis.txt
scene_maker/input/Overlord, Advent of the New Gods, Part 1, Volume 1, Chapter 01 - Alone No More/: story.txt
scene_maker/input/Overlord, Advent of the New Gods, Part 2, Volume 1, Chapter 02 - Yggdrasil's End/: story.txt
scene_maker/input/Overlord, Advent of the New Gods, Part 3, Volume 1, Chapter 03 - Guardians/: story.txt
scene_maker/input/Rising Of Tanaka In Another World, part 1/: story.txt
scene_maker/input/Rising Of Tanaka In Another World, part 10/: story.txt
scene_maker/input/Rising Of Tanaka In Another World, part 100/: story.txt
scene_maker/input/Rising Of Tanaka In Another World, part 101/: story.txt
scene_maker/input/Rising Of Tanaka In Another World, part 102/: story.txt
scene_maker/input/Rising Of Tanaka In Another World, part 103/: story.txt
scene_maker/input/Rising Of Tanaka In Another World, part 104/: story.txt
scene_maker/input/Rising Of Tanaka In Another World, part 105/: story.txt
scene_maker/input/Rising Of Tanaka In Another World, part 106/: story.txt
scene_maker/input/Rising Of Tanaka In Another World, part 107/: story.txt
scene_maker/input/Rising Of Tanaka In Another World, part 108/: story.txt
scene_maker/input/Rising Of Tanaka In Another World, part 109/: story.txt
scene_maker/input/Rising Of Tanaka In Another World, part 11/: story.txt
scene_maker/output/: script.md
(+727 files in other folders)
