[project]
name = "research_from_trello"
version = "0.1.0"
description = "research_from_trello using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0"
]

[project.scripts]
research_from_trello = "research_from_trello.main:run"
run_crew = "research_from_trello.main:run"
train = "research_from_trello.main:train"
replay = "research_from_trello.main:replay"
test = "research_from_trello.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
