[project]
name = "research_item"
version = "0.1.0"
description = "research_item using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0"
]

[project.scripts]
research_item = "research_item.main:run"
run_crew = "research_item.main:run"
train = "research_item.main:train"
replay = "research_item.main:replay"
test = "research_item.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
