[project]
name = "scene_maker"
version = "0.1.0"
description = "scene_maker using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0"
]

[project.scripts]
scene_maker = "scene_maker.main:run"
run_crew = "scene_maker.main:run"
train = "scene_maker.main:train"
replay = "scene_maker.main:replay"
test = "scene_maker.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
